# open-chronicle-next

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  context.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
contracts/: chunk-v1.schema.json  derived-artifact-v1.schema.json  event-v1.schema.json  query-v1.schema.json  shared-service-v1.schema.json
crates/chronicle-admin/: Cargo.toml
crates/chronicle-admin/src/: main.rs
crates/chronicle-domain/: Cargo.toml
crates/chronicle-domain/src/: api.rs  artifact.rs  chunk.rs  config.rs  event.rs  export.rs  health.rs  ids.rs  lib.rs  query.rs
crates/chronicle-domain/tests/: contract_invariants.rs  forward_compat.rs  golden_schema.rs  privacy_payload.rs  shared_api.rs
crates/chronicle-engine/: Cargo.toml
crates/chronicle-engine/src/: chunker.rs  coverage.rs  duration.rs  health.rs  ingest.rs  lib.rs  maintenance.rs  policy.rs  reconcile.rs  runtime.rs  service.rs  study.rs
crates/chronicle-engine/tests/: artifact.rs  chunk_contract.rs  clock_domains.rs  duration.rs  export.rs  grants.rs  ingest_contract.rs  late_input.rs  maintenance.rs  reconcile.rs  runtime.rs  service_contract.rs  study.rs
crates/chronicle-engine/tests/common/: mod.rs
crates/chronicle-ffi/: Cargo.toml
crates/chronicle-ffi/src/: lib.rs
crates/chronicle-mcp/: Cargo.toml
crates/chronicle-mcp/src/: artifact_tools.rs  lib.rs  limits.rs  logging.rs  main.rs  read_tools.rs  resources.rs  server.rs
crates/chronicle-mcp/tests/: artifact_writes.rs  concurrency.rs  protocol.rs  query_parity.rs  security.rs  stdio_transport.rs
crates/chronicle-mcp/tests/common/: mod.rs
crates/chronicle-store/: Cargo.toml
crates/chronicle-store/migrations/: 0001_init.sql  0002_aggregation_index.sql  0003_health_operation_facts.sql  0004_retention_health.sql  0005_projection_identity.sql
crates/chronicle-store/src/: artifacts.rs  checksum.rs  export.rs  generation.rs  health.rs  journal.rs  layout.rs  lib.rs  locks.rs  maintenance.rs  permissions.rs  projection.rs  queries.rs  receipts.rs  recovery.rs  retention.rs  search.rs  sqlite.rs  statistics.rs  storage.rs
crates/chronicle-store/tests/: aggregation_backlog.rs  artifact_recovery.rs  artifact_transitions.rs  capture_owner.rs  chunk_recovery.rs  concurrency.rs  crash_recovery.rs  export_snapshot.rs  fts.rs  journal.rs  maintenance.rs  migration.rs  permissions.rs  projection_rebuild.rs  query_contract.rs  retention.rs  statistics.rs  storage_admission.rs
crates/chronicle-store/tests/common/: mod.rs
docs/: PRD.md  aggregation.md  architecture.md  data-contract.md  export.md  mcp-contract.md  operations.md  privacy-model.md  privacy.md  provenance.md  query-contract.md  recovery.md  release.md  security.md  testing.md
docs/contracts/: chunk-v1.md  derived-artifact-v1.md  event-v1.md  query-v1.md  shared-service-v1.md
docs/decisions/: 0001-window-selection.md
docs/plans/: 2026-07-13-001-feat-open-chronicle-mvp-plan.md
fixtures/synthetic/session-v1/: ae13-seed-events.jsonl  ae13-ten-unchanged-chunk.json  ae13-ten-unchanged-events.jsonl  ae4-ten-scheduled-chunk.json  ae4-ten-scheduled-events.jsonl  chunks.jsonl  events.jsonl  manifest.json  queries.json  query-results-v1.json
include/: chronicle.h
macos/OpenChronicle/: OpenChronicle-Bridging-Header.h
macos/OpenChronicle.xcodeproj/: project.pbxproj
macos/OpenChronicle.xcodeproj/xcshareddata/xcschemes/: OpenChronicle.xcscheme
macos/OpenChronicle/App/: AppCaptureRuntime.swift  AppModel.swift  AppRuntimeFactory.swift  NavigationModel.swift  OpenChronicleApp.swift
macos/OpenChronicle/Capture/: ActiveWindowProvider.swift  CaptureCoordinator.swift  ContentDeduplicator.swift  CoreCaptureIngestor.swift  IdleStateSource.swift  PrivacyPreflight.swift  ScreenCaptureService.swift  VisionOCRService.swift
macos/OpenChronicle/Engine/: AnalysisQuery.swift  ChronicleCore.swift  ChronicleFFI.swift  ChronicleTypes.swift  DiagnosticHealth.swift  EvidenceQuery.swift  FactualReport.swift
macos/OpenChronicle/Features/Analysis/: AnalysisView.swift  AnalysisViewModel.swift
macos/OpenChronicle/Features/Health/: HealthView.swift  HealthViewModel.swift
macos/OpenChronicle/Features/Home/: HomeView.swift  HomeViewModel.swift
macos/OpenChronicle/Features/Settings/: DisclosureGrantView.swift  IntegrationSettingsModel.swift  IntegrationSettingsView.swift  PrivacySettingsView.swift  SettingsView.swift  SettingsViewModel.swift
macos/OpenChronicle/Onboarding/: AgentStep.swift  CaptureProofService.swift  ModeStep.swift  OnboardingConfigurationService.swift  OnboardingModel.swift  OnboardingView.swift  PermissionStep.swift  PrivacyStep.swift  WelcomeStep.swift
macos/OpenChronicle/Resources/: Info.plist
macos/OpenChronicle/Services/: AgentConnectionService.swift  AgentDetectionService.swift  AgentRegistrationService.swift  DisclosureGrantService.swift  InstallLocationService.swift  LaunchAtLoginService.swift  LifecycleMonitor.swift  MCPBPackageService.swift  NotificationService.swift  ScreenRecordingPermissionService.swift  StorageMonitor.swift
macos/OpenChronicleTests/: ActiveWindowProviderTests.swift  AgentRegistrationTests.swift  AppRuntimeTests.swift  BridgeTests.swift  CaptureIngestorTests.swift  CaptureRaceTests.swift  CaptureTestSupport.swift  CoordinatorTests.swift  DedupTests.swift  FixtureParityTests.swift  HealthTests.swift  HomeViewModelTests.swift  IdleStateSourceTests.swift  LaunchAtLoginTests.swift  MCPBPackageTests.swift  NotificationTests.swift  OCRTests.swift  OnboardingTests.swift  PrivacyPreflightTests.swift  ReportFlowTests.swift  ReportParityTests.swift  SettingsTests.swift  TimelineAnalysisTests.swift
macos/OpenChronicleTests/Fixtures/: shared-response-v1.json
scripts/: build-app.sh  build-rust-universal.sh  check-capture-apis.sh  check-forbidden-runtime.sh  package-dmg.sh  probe-release-packaging.sh  release-common.sh  sign-app.sh  smoke-installed-app.sh  smoke-mcp.sh  verify-bundle.sh  verify-release.sh  write-checksum.sh
spikes/macos-window-resolution/: Package.swift  README.md
(+10 files in other folders)
