[workspace]
members = [
    "crates/chronicle-admin",
    "crates/chronicle-domain",
    "crates/chronicle-engine",
    "crates/chronicle-ffi",
    "crates/chronicle-mcp",
    "crates/chronicle-store",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96.1"
license = "MIT"
repository = "https://github.com/hbruceweaver/open-chronicle-next"

[workspace.dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde", "std"] }
rusqlite = { version = "0.40.1", features = ["bundled", "chrono", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
uuid = { version = "1.23.5", features = ["serde", "v7"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "unwind"
strip = "symbols"

