[package]
name = "chronicle-domain"
description = "Versioned factual evidence contracts for Open Chronicle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
jsonschema = { version = "0.47.0", default-features = false }

[lints]
workspace = true
