[package]
name = "chronicle-engine"
description = "Serialized factual ingestion, aggregation, and query services for Open Chronicle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chronicle-domain = { path = "../chronicle-domain" }
chronicle-store = { path = "../chronicle-store" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
