[package]
name = "chronicle-ffi"
description = "Versioned C ABI between the Open Chronicle macOS app and Rust core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
chrono.workspace = true
chronicle-domain = { path = "../chronicle-domain" }
chronicle-engine = { path = "../chronicle-engine" }
chronicle-store = { path = "../chronicle-store" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
