[package]
name = "chronicle-mcp"
description = "Grant-bounded local MCP adapter for Open Chronicle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "chronicle-mcp"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
chronicle-domain = { path = "../chronicle-domain" }
chronicle-engine = { path = "../chronicle-engine" }
rmcp = { version = "2.2.0", default-features = false, features = ["macros", "server", "transport-io"] }
schemars = "1.2.1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.49.0", features = ["io-std", "macros", "rt-multi-thread", "time"] }
uuid.workspace = true

[dev-dependencies]
chronicle-store = { path = "../chronicle-store" }
rmcp = { version = "2.2.0", default-features = false, features = ["client", "transport-child-process"] }
tempfile.workspace = true

[lints]
workspace = true
