[package]
name = "chronicle-store"
description = "Canonical journal and rebuildable projection storage for Open Chronicle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chronicle-domain = { path = "../chronicle-domain" }
rusqlite.workspace = true

[lints]
workspace = true

