[package]
name = "chronicle-store"
description = "Canonical journal and rebuildable projection storage for Open Chronicle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chronicle-domain = { path = "../chronicle-domain" }
chrono.workspace = true
rusqlite.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
